These are the release notes for the Diff extension.

Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Diff
Latest version of the release notes: https://gerrit.wikimedia.org/r/gitweb?p=mediawiki/extensions/Diff.git;a=blob;f=RELEASE-NOTES



=== Version 0.3 ===
(dev)

* Improved type hinting
* Removed static method from IDiff interface since this is not allowed in strict mode
* Added constructor tests for MapDiff and ListDiff
* Improved entry point and setup code. Diff.php is now the main entry point for both MW extension and standalone library

=== Version 0.2 ===
2012-11-01

* Fixed tests to work with PHP 5.4 and above
* Added translations
* Added some profiling calls

=== Version 0.1 ===
2012-9-25

Initial release with these features:

* Classes to represent diffs or collections of diff operations: Diff, MapDiff, ListDiff
* Classes to represent diff operations: Diff, MapDiff, ListDiff, DiffOpAdd, DiffOpChange, DiffOpRemove
* Methods to compute list and maps diffs
* Support for recursive diffs of arbitrary depth
* Works as MediaWiki extension or as standalone library