@@ -10,8 +10,10 @@ Latest version of the release notes: https://gerrit.wikimedia.org/r/gitweb?p=med
 
 * Improved type hinting
 * Removed static method from IDiff interface since this is not allowed in strict mode
-* Added constructor tests for MapDiff and ListDiff
 * Improved entry point and setup code. Diff.php is now the main entry point for both MW extension and standalone library
+* Added IDiff::removeEmptyOperations
+* Added constructor tests for MapDiff and ListDiff
+* Added extra tests for Diff and MapDiff
 
 === Version 0.2 ===
 2012-11-01
